# llmtime

./: app.py  finetune_qwen.py  guide.md  main.py  predict_kpi.py  prepare_finetune.py  pyproject.toml  qwen_kpi.csv  qwen_predictions.csv  run_qwen.py
data/: kpi_dataset.py  kpi_serialize.py
data/finetune/: val.jsonl
finetuning/: README.md  app.py  dataset_prep.py  finetune_qwen.py  inference_test.py  requirements_finetune.txt
models/: llms.py  qwen.py
outputs/: README.md
outputs/checkpoint-60/: README.md  adapter_config.json  trainer_state.json
