[project]
name = "llmtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "jax[cpu]",
    "torch",
    "openai==0.28.1",
    "tiktoken",
    "tqdm",
    "matplotlib",
    "pandas>=2.0.0",
    "darts",
    "gpytorch",
    "transformers",
    "datasets",
    "multiprocess",
    "SentencePiece",
    "accelerate",
    "gdown",
    "mistralai",
    "unsloth>=2025.12.6",
    "trl>=0.24.0",
    "peft>=0.18.0",
    "bitsandbytes>=0.49.0",
    "gradio>=6.1.0",
]
