[project]
name = "llmtime"
version = "0.1.0"
description = "LLM-based time series forecasting with Qwen fine-tuning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    
    # LoRA fine-tuning
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    
    # Utilities
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]
# Original LLMTime experiments (requires Python <3.10)
llmtime = [
    "darts>=0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
]

